--- a/Notebooks/jupyter.ipynb
+++ b/Notebooks/jupyter.ipynb
@@ -1248,8 +1248,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "acc_df.to_csv('../Processed Data/Accelerometer.csv')\n",
-    "gyro_df.to_csv('../Processed Data/Gyroscope.csv')"
+    "acc_df.to_csv('../Processed/Accelerometer.csv')\n",
+    "gyro_df.to_csv('../Processed/Gyroscope.csv')"
    ]
   },
   {
