--- a/Notebooks/jupyter.ipynb
+++ b/Notebooks/jupyter.ipynb
@@ -1248,9 +1248,96 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "acc_df.to_csv('../Processed/Accelerometer.csv')\n",
-    "gyro_df.to_csv('../Processed/Gyroscope.csv')"
+    "# acc_df.to_csv('../Processed/Accelerometer.csv')\n",
+    "# gyro_df.to_csv('../Processed/Gyroscope.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "acc_df = pd.read_csv('../Processed/Accelerometer.csv')\n",
+    "gyro_df = pd.read_csv('../Processed/Gyroscope.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 23578 entries, 0 to 23577\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   Unnamed: 0    23578 non-null  int64  \n",
+      " 1   epoch (ms)    23578 non-null  int64  \n",
+      " 2   time (01:00)  23578 non-null  object \n",
+      " 3   elapsed (s)   23578 non-null  float64\n",
+      " 4   x-axis (g)    23578 non-null  float64\n",
+      " 5   y-axis (g)    23578 non-null  float64\n",
+      " 6   z-axis (g)    23578 non-null  float64\n",
+      " 7   Participant   23578 non-null  object \n",
+      " 8   label         23578 non-null  object \n",
+      " 9   category      23578 non-null  object \n",
+      " 10  set           23578 non-null  int64  \n",
+      "dtypes: float64(4), int64(3), object(4)\n",
+      "memory usage: 2.0+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "acc_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['epoch (ms)'] = pd.to_datetime(df['epoch (ms)'], unit='ms')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['time (01:00)'] = pd.to_datetime(df['time (01:00)'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "acc_df.index  = pd.to_datetime(acc_df['epoch (ms)'], unit='ms')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gyro_df.index  = pd.to_datetime(gyro_df['epoch (ms)'], unit='ms')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
