--- a/Notebooks/jupyter.ipynb
+++ b/Notebooks/jupyter.ipynb
@@ -1333,11 +1333,240 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Removing the un-necessary columns"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "del acc_df['Unnamed: 0']\n",
+    "del acc_df['elapsed (s)']\n",
+    "del acc_df['epoch (ms)']\n",
+    "del acc_df['time (01:00)']\n",
+    "\n",
+    "del gyro_df['Unnamed: 0']\n",
+    "del gyro_df['elapsed (s)']\n",
+    "del gyro_df['epoch (ms)']\n",
+    "del gyro_df['time (01:00)']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x-axis (g)</th>\n",
+       "      <th>y-axis (g)</th>\n",
+       "      <th>z-axis (g)</th>\n",
+       "      <th>Participant</th>\n",
+       "      <th>label</th>\n",
+       "      <th>category</th>\n",
+       "      <th>set</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>epoch (ms)</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2019-01-11 15:10:08.431</th>\n",
+       "      <td>0.010</td>\n",
+       "      <td>0.964</td>\n",
+       "      <td>-0.087</td>\n",
+       "      <td>A</td>\n",
+       "      <td>bench</td>\n",
+       "      <td>heavy</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-11 15:10:08.511</th>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.961</td>\n",
+       "      <td>-0.069</td>\n",
+       "      <td>A</td>\n",
+       "      <td>bench</td>\n",
+       "      <td>heavy</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-11 15:10:08.591</th>\n",
+       "      <td>0.001</td>\n",
+       "      <td>0.974</td>\n",
+       "      <td>-0.087</td>\n",
+       "      <td>A</td>\n",
+       "      <td>bench</td>\n",
+       "      <td>heavy</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-11 15:10:08.671</th>\n",
+       "      <td>-0.012</td>\n",
+       "      <td>0.971</td>\n",
+       "      <td>-0.084</td>\n",
+       "      <td>A</td>\n",
+       "      <td>bench</td>\n",
+       "      <td>heavy</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-11 15:10:08.751</th>\n",
+       "      <td>-0.013</td>\n",
+       "      <td>0.954</td>\n",
+       "      <td>-0.094</td>\n",
+       "      <td>A</td>\n",
+       "      <td>bench</td>\n",
+       "      <td>heavy</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-16 19:14:23.089</th>\n",
+       "      <td>0.012</td>\n",
+       "      <td>0.596</td>\n",
+       "      <td>0.815</td>\n",
+       "      <td>E</td>\n",
+       "      <td>squat</td>\n",
+       "      <td>heavy</td>\n",
+       "      <td>94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-16 19:14:23.169</th>\n",
+       "      <td>0.009</td>\n",
+       "      <td>0.528</td>\n",
+       "      <td>0.821</td>\n",
+       "      <td>E</td>\n",
+       "      <td>squat</td>\n",
+       "      <td>heavy</td>\n",
+       "      <td>94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-16 19:14:23.249</th>\n",
+       "      <td>0.015</td>\n",
+       "      <td>0.554</td>\n",
+       "      <td>0.746</td>\n",
+       "      <td>E</td>\n",
+       "      <td>squat</td>\n",
+       "      <td>heavy</td>\n",
+       "      <td>94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-16 19:14:23.329</th>\n",
+       "      <td>0.006</td>\n",
+       "      <td>0.574</td>\n",
+       "      <td>0.824</td>\n",
+       "      <td>E</td>\n",
+       "      <td>squat</td>\n",
+       "      <td>heavy</td>\n",
+       "      <td>94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-16 19:14:23.409</th>\n",
+       "      <td>0.015</td>\n",
+       "      <td>0.588</td>\n",
+       "      <td>0.826</td>\n",
+       "      <td>E</td>\n",
+       "      <td>squat</td>\n",
+       "      <td>heavy</td>\n",
+       "      <td>94</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>23578 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         x-axis (g)  y-axis (g)  z-axis (g) Participant  \\\n",
+       "epoch (ms)                                                                \n",
+       "2019-01-11 15:10:08.431       0.010       0.964      -0.087           A   \n",
+       "2019-01-11 15:10:08.511       0.000       0.961      -0.069           A   \n",
+       "2019-01-11 15:10:08.591       0.001       0.974      -0.087           A   \n",
+       "2019-01-11 15:10:08.671      -0.012       0.971      -0.084           A   \n",
+       "2019-01-11 15:10:08.751      -0.013       0.954      -0.094           A   \n",
+       "...                             ...         ...         ...         ...   \n",
+       "2019-01-16 19:14:23.089       0.012       0.596       0.815           E   \n",
+       "2019-01-16 19:14:23.169       0.009       0.528       0.821           E   \n",
+       "2019-01-16 19:14:23.249       0.015       0.554       0.746           E   \n",
+       "2019-01-16 19:14:23.329       0.006       0.574       0.824           E   \n",
+       "2019-01-16 19:14:23.409       0.015       0.588       0.826           E   \n",
+       "\n",
+       "                         label category  set  \n",
+       "epoch (ms)                                    \n",
+       "2019-01-11 15:10:08.431  bench    heavy    1  \n",
+       "2019-01-11 15:10:08.511  bench    heavy    1  \n",
+       "2019-01-11 15:10:08.591  bench    heavy    1  \n",
+       "2019-01-11 15:10:08.671  bench    heavy    1  \n",
+       "2019-01-11 15:10:08.751  bench    heavy    1  \n",
+       "...                        ...      ...  ...  \n",
+       "2019-01-16 19:14:23.089  squat    heavy   94  \n",
+       "2019-01-16 19:14:23.169  squat    heavy   94  \n",
+       "2019-01-16 19:14:23.249  squat    heavy   94  \n",
+       "2019-01-16 19:14:23.329  squat    heavy   94  \n",
+       "2019-01-16 19:14:23.409  squat    heavy   94  \n",
+       "\n",
+       "[23578 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "acc_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "acc_df = pd.read_csv('../Processed/Accelerometer.csv')\n",
+    "gyro_df = pd.read_csv('../Processed/Gyroscope.csv')"
+   ]
   },
   {
    "cell_type": "code",
