--- a/Notebooks/jupyter.ipynb
+++ b/Notebooks/jupyter.ipynb
@@ -1570,6 +1570,73 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "files = glob('../Raw/MetaMotion/*.csv')\n",
+    "\n",
+    "def read_data(files):\n",
+    "    ## acc stands for Accelerometer DataFrame\n",
+    "    acc_df = pd.DataFrame()\n",
+    "\n",
+    "    ###gyro stands for gyroscope DataFrame\n",
+    "    gyro_df = pd.DataFrame()\n",
+    "\n",
+    "    ## Creating a Counter\n",
+    "    acc_set = 1\n",
+    "    gyro_set = 1\n",
+    "\n",
+    "    for file in files:\n",
+    "        participant = file.split('-')[0]\n",
+    "        participant= participant.replace(data_path, \"\")\n",
+    "        label = file.split('-')[1]\n",
+    "        category = file.split('-')[2].rstrip('123').rstrip('2_MetaWear_2019')\n",
+    "        df = pd.read_csv(file)\n",
+    "        df['Participant']  = participant\n",
+    "        df['label'] = label\n",
+    "        df['category'] = category \n",
+    "        if 'Accelerometer' in file:\n",
+    "            df['set'] = acc_set\n",
+    "            acc_set += 1\n",
+    "            acc_df = pd.concat([acc_df, df])\n",
+    "        if 'Gyroscope' in file:\n",
+    "            df['set'] = gyro_set\n",
+    "            gyro_set += 1\n",
+    "            gyro_df = pd.concat([gyro_df, df])\n",
+    "\n",
+    "    # --------------------------------------------------------------\n",
+    "    # Working with datetimes\n",
+    "    # --------------------------------------------------------------\n",
+    "\n",
+    "    acc_df.index  = pd.to_datetime(acc_df['epoch (ms)'], unit='ms')\n",
+    "\n",
+    "    gyro_df.index  = pd.to_datetime(gyro_df['epoch (ms)'], unit='ms')\n",
+    "\n",
+    "    # del acc_df['Unnamed: 0']\n",
+    "    del acc_df['elapsed (s)']\n",
+    "    del acc_df['epoch (ms)']\n",
+    "    del acc_df['time (01:00)']\n",
+    "\n",
+    "    # del gyro_df['Unnamed: 0']\n",
+    "    del gyro_df['elapsed (s)']\n",
+    "    del gyro_df['epoch (ms)']\n",
+    "    del gyro_df['time (01:00)']\n",
+    "    \n",
+    "    return acc_df, gyro_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "acc_df, gyro_df = read_data(files)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
