--- a/Notebooks/jupyter.ipynb
+++ b/Notebooks/jupyter.ipynb
@@ -1637,6 +1637,277 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Merging the DataFrames\n",
+    "data_merged  = pd.concat([acc_df.iloc[:, :3], gyro_df], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>x-axis (g)</th>\n",
+       "      <th>y-axis (g)</th>\n",
+       "      <th>z-axis (g)</th>\n",
+       "      <th>x-axis (deg/s)</th>\n",
+       "      <th>y-axis (deg/s)</th>\n",
+       "      <th>z-axis (deg/s)</th>\n",
+       "      <th>Participant</th>\n",
+       "      <th>label</th>\n",
+       "      <th>category</th>\n",
+       "      <th>set</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>epoch (ms)</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2019-01-11 15:08:04.950</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-10.671</td>\n",
+       "      <td>-1.524</td>\n",
+       "      <td>5.976</td>\n",
+       "      <td>B</td>\n",
+       "      <td>bench</td>\n",
+       "      <td>heavy</td>\n",
+       "      <td>30.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-11 15:08:04.990</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-8.720</td>\n",
+       "      <td>-2.073</td>\n",
+       "      <td>3.171</td>\n",
+       "      <td>B</td>\n",
+       "      <td>bench</td>\n",
+       "      <td>heavy</td>\n",
+       "      <td>30.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         x-axis (g)  y-axis (g)  z-axis (g)  x-axis (deg/s)  \\\n",
+       "epoch (ms)                                                                    \n",
+       "2019-01-11 15:08:04.950         NaN         NaN         NaN         -10.671   \n",
+       "2019-01-11 15:08:04.990         NaN         NaN         NaN          -8.720   \n",
+       "\n",
+       "                         y-axis (deg/s)  z-axis (deg/s) Participant  label  \\\n",
+       "epoch (ms)                                                                   \n",
+       "2019-01-11 15:08:04.950          -1.524           5.976           B  bench   \n",
+       "2019-01-11 15:08:04.990          -2.073           3.171           B  bench   \n",
+       "\n",
+       "                        category   set  \n",
+       "epoch (ms)                              \n",
+       "2019-01-11 15:08:04.950    heavy  30.0  \n",
+       "2019-01-11 15:08:04.990    heavy  30.0  "
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_merged.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_merged.columns = [\n",
+    "    'acc_x',\n",
+    "    'acc_y',\n",
+    "    'acc_z',\n",
+    "    'gyro_x',\n",
+    "    'gyro_y',\n",
+    "    'gyro_z',\n",
+    "    'Participant',\n",
+    "    'label',\n",
+    "    'category',\n",
+    "    'set'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>acc_x</th>\n",
+       "      <th>acc_y</th>\n",
+       "      <th>acc_z</th>\n",
+       "      <th>gyro_x</th>\n",
+       "      <th>gyro_y</th>\n",
+       "      <th>gyro_z</th>\n",
+       "      <th>Participant</th>\n",
+       "      <th>label</th>\n",
+       "      <th>category</th>\n",
+       "      <th>set</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>epoch (ms)</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2019-01-11 15:08:04.950</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-10.671</td>\n",
+       "      <td>-1.524</td>\n",
+       "      <td>5.976</td>\n",
+       "      <td>B</td>\n",
+       "      <td>bench</td>\n",
+       "      <td>heavy</td>\n",
+       "      <td>30.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-11 15:08:04.990</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-8.720</td>\n",
+       "      <td>-2.073</td>\n",
+       "      <td>3.171</td>\n",
+       "      <td>B</td>\n",
+       "      <td>bench</td>\n",
+       "      <td>heavy</td>\n",
+       "      <td>30.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-11 15:08:05.030</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.488</td>\n",
+       "      <td>-3.537</td>\n",
+       "      <td>-4.146</td>\n",
+       "      <td>B</td>\n",
+       "      <td>bench</td>\n",
+       "      <td>heavy</td>\n",
+       "      <td>30.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-11 15:08:05.070</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.244</td>\n",
+       "      <td>-5.854</td>\n",
+       "      <td>3.537</td>\n",
+       "      <td>B</td>\n",
+       "      <td>bench</td>\n",
+       "      <td>heavy</td>\n",
+       "      <td>30.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         acc_x  acc_y  acc_z  gyro_x  gyro_y  gyro_z  \\\n",
+       "epoch (ms)                                                             \n",
+       "2019-01-11 15:08:04.950    NaN    NaN    NaN -10.671  -1.524   5.976   \n",
+       "2019-01-11 15:08:04.990    NaN    NaN    NaN  -8.720  -2.073   3.171   \n",
+       "2019-01-11 15:08:05.030    NaN    NaN    NaN   0.488  -3.537  -4.146   \n",
+       "2019-01-11 15:08:05.070    NaN    NaN    NaN   0.244  -5.854   3.537   \n",
+       "\n",
+       "                        Participant  label category   set  \n",
+       "epoch (ms)                                                 \n",
+       "2019-01-11 15:08:04.950           B  bench    heavy  30.0  \n",
+       "2019-01-11 15:08:04.990           B  bench    heavy  30.0  \n",
+       "2019-01-11 15:08:05.030           B  bench    heavy  30.0  \n",
+       "2019-01-11 15:08:05.070           B  bench    heavy  30.0  "
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_merged.head(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
