--- a/Notebooks/jupyter.ipynb
+++ b/Notebooks/jupyter.ipynb
@@ -38,7 +38,7 @@
    "outputs": [],
    "source": [
     "## First I am reading single CSV file\n",
-    "single_file_acc = pd.read_csv('../Raw/MetaMotion/A-bench-heavy2-rpe8_MetaWear_2019-01-11T16.10.08.270_C42732BE255C_Accelerometer_12.500Hz_1.4.4.csv')"
+    "single_file_acc = pd.read_csv('../Data/Raw-Data/MetaMotion/A-bench-heavy2-rpe8_MetaWear_2019-01-11T16.10.08.270_C42732BE255C_Accelerometer_12.500Hz_1.4.4.csv')"
    ]
   },
   {
@@ -211,7 +211,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "single_file_gyro = pd.read_csv('../Raw/MetaMotion/A-bench-heavy2-rpe8_MetaWear_2019-01-11T16.10.08.270_C42732BE255C_Gyroscope_25.000Hz_1.4.4.csv')"
+    "single_file_gyro = pd.read_csv('../Data/Raw-Data/MetaMotion/A-bench-heavy2-rpe8_MetaWear_2019-01-11T16.10.08.270_C42732BE255C_Gyroscope_25.000Hz_1.4.4.csv')"
    ]
   },
   {
@@ -398,7 +398,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = glob('../Raw/MetaMotion/*.csv')"
+    "files = glob('../Data/Raw-Data/MetaMotion/*.csv')"
    ]
   },
   {
@@ -444,7 +444,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = '../Raw/MetaMotion\\\\'"
+    "data_path = '../Data/Raw-Data/MetaMotion\\\\'"
    ]
   },
   {
@@ -1258,8 +1258,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "acc_df = pd.read_csv('../Processed/Accelerometer.csv')\n",
-    "gyro_df = pd.read_csv('../Processed/Gyroscope.csv')"
+    "acc_df = pd.read_csv('../Data/Processed-Data/Accelerometer.csv')\n",
+    "gyro_df = pd.read_csv('../Data/Processed-Data/Gyroscope.csv')"
    ]
   },
   {
@@ -1576,8 +1576,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "acc_df = pd.read_csv('../Processed/Accelerometer.csv')\n",
-    "gyro_df = pd.read_csv('../Processed/Gyroscope.csv')"
+    "acc_df = pd.read_csv('../Data/Processed-Data/Accelerometer.csv')\n",
+    "gyro_df = pd.read_csv('../Data/Processed-Data/Gyroscope.csv')"
    ]
   },
   {
@@ -2729,7 +2729,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_resampled.to_pickle('../Intermediate/01_data_processed.pkl')"
+    "data_resampled.to_pickle('../Data/interim-Data/01_data_processed.pkl')"
    ]
   },
   {
