--- a/Notebooks/jupyter.ipynb
+++ b/Notebooks/jupyter.ipynb
@@ -2733,6 +2733,276 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Visualization**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib as mpl\n",
+    "import seaborn as sns\n",
+    "import plotly.express as px"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load the Cleaned Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Previously we save our files in 2 formats\n",
+    "1. .pickle\n",
+    "2. .csv\n",
+    "\n",
+    "We can use any of the 2 format to read the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>acc_x</th>\n",
+       "      <th>acc_y</th>\n",
+       "      <th>acc_z</th>\n",
+       "      <th>gyro_x</th>\n",
+       "      <th>gyro_y</th>\n",
+       "      <th>gyro_z</th>\n",
+       "      <th>Participant</th>\n",
+       "      <th>label</th>\n",
+       "      <th>category</th>\n",
+       "      <th>set</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>epoch (ms)</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2019-01-11 15:08:05.200</th>\n",
+       "      <td>0.013500</td>\n",
+       "      <td>0.977000</td>\n",
+       "      <td>-0.071000</td>\n",
+       "      <td>-1.8904</td>\n",
+       "      <td>2.4392</td>\n",
+       "      <td>0.9388</td>\n",
+       "      <td>B</td>\n",
+       "      <td>bench</td>\n",
+       "      <td>heavy</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-11 15:08:05.400</th>\n",
+       "      <td>-0.001500</td>\n",
+       "      <td>0.970500</td>\n",
+       "      <td>-0.079500</td>\n",
+       "      <td>-1.6826</td>\n",
+       "      <td>-0.8904</td>\n",
+       "      <td>2.1708</td>\n",
+       "      <td>B</td>\n",
+       "      <td>bench</td>\n",
+       "      <td>heavy</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-11 15:08:05.600</th>\n",
+       "      <td>0.001333</td>\n",
+       "      <td>0.971667</td>\n",
+       "      <td>-0.064333</td>\n",
+       "      <td>2.5608</td>\n",
+       "      <td>-0.2560</td>\n",
+       "      <td>-1.4146</td>\n",
+       "      <td>B</td>\n",
+       "      <td>bench</td>\n",
+       "      <td>heavy</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-11 15:08:05.800</th>\n",
+       "      <td>-0.024000</td>\n",
+       "      <td>0.957000</td>\n",
+       "      <td>-0.073500</td>\n",
+       "      <td>8.0610</td>\n",
+       "      <td>-4.5244</td>\n",
+       "      <td>-2.0730</td>\n",
+       "      <td>B</td>\n",
+       "      <td>bench</td>\n",
+       "      <td>heavy</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-11 15:08:06.000</th>\n",
+       "      <td>-0.028000</td>\n",
+       "      <td>0.957667</td>\n",
+       "      <td>-0.115000</td>\n",
+       "      <td>2.4390</td>\n",
+       "      <td>-1.5486</td>\n",
+       "      <td>-3.6098</td>\n",
+       "      <td>B</td>\n",
+       "      <td>bench</td>\n",
+       "      <td>heavy</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-11 15:08:06.200</th>\n",
+       "      <td>-0.026000</td>\n",
+       "      <td>0.965000</td>\n",
+       "      <td>-0.118000</td>\n",
+       "      <td>0.4634</td>\n",
+       "      <td>5.2194</td>\n",
+       "      <td>-6.4636</td>\n",
+       "      <td>B</td>\n",
+       "      <td>bench</td>\n",
+       "      <td>heavy</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-11 15:08:06.400</th>\n",
+       "      <td>-0.048667</td>\n",
+       "      <td>0.790000</td>\n",
+       "      <td>-0.145333</td>\n",
+       "      <td>21.6950</td>\n",
+       "      <td>8.1708</td>\n",
+       "      <td>-28.2196</td>\n",
+       "      <td>B</td>\n",
+       "      <td>bench</td>\n",
+       "      <td>heavy</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-11 15:08:06.600</th>\n",
+       "      <td>-0.170000</td>\n",
+       "      <td>0.899500</td>\n",
+       "      <td>-0.250000</td>\n",
+       "      <td>17.5246</td>\n",
+       "      <td>1.5976</td>\n",
+       "      <td>-17.5854</td>\n",
+       "      <td>B</td>\n",
+       "      <td>bench</td>\n",
+       "      <td>heavy</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-11 15:08:06.800</th>\n",
+       "      <td>-0.222667</td>\n",
+       "      <td>0.907000</td>\n",
+       "      <td>-0.204333</td>\n",
+       "      <td>-7.2318</td>\n",
+       "      <td>-1.3536</td>\n",
+       "      <td>-0.4026</td>\n",
+       "      <td>B</td>\n",
+       "      <td>bench</td>\n",
+       "      <td>heavy</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-11 15:08:07.000</th>\n",
+       "      <td>-0.204500</td>\n",
+       "      <td>0.930000</td>\n",
+       "      <td>-0.149000</td>\n",
+       "      <td>-28.6830</td>\n",
+       "      <td>-10.2076</td>\n",
+       "      <td>20.5732</td>\n",
+       "      <td>B</td>\n",
+       "      <td>bench</td>\n",
+       "      <td>heavy</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            acc_x     acc_y     acc_z   gyro_x   gyro_y  \\\n",
+       "epoch (ms)                                                                \n",
+       "2019-01-11 15:08:05.200  0.013500  0.977000 -0.071000  -1.8904   2.4392   \n",
+       "2019-01-11 15:08:05.400 -0.001500  0.970500 -0.079500  -1.6826  -0.8904   \n",
+       "2019-01-11 15:08:05.600  0.001333  0.971667 -0.064333   2.5608  -0.2560   \n",
+       "2019-01-11 15:08:05.800 -0.024000  0.957000 -0.073500   8.0610  -4.5244   \n",
+       "2019-01-11 15:08:06.000 -0.028000  0.957667 -0.115000   2.4390  -1.5486   \n",
+       "2019-01-11 15:08:06.200 -0.026000  0.965000 -0.118000   0.4634   5.2194   \n",
+       "2019-01-11 15:08:06.400 -0.048667  0.790000 -0.145333  21.6950   8.1708   \n",
+       "2019-01-11 15:08:06.600 -0.170000  0.899500 -0.250000  17.5246   1.5976   \n",
+       "2019-01-11 15:08:06.800 -0.222667  0.907000 -0.204333  -7.2318  -1.3536   \n",
+       "2019-01-11 15:08:07.000 -0.204500  0.930000 -0.149000 -28.6830 -10.2076   \n",
+       "\n",
+       "                          gyro_z Participant  label category  set  \n",
+       "epoch (ms)                                                         \n",
+       "2019-01-11 15:08:05.200   0.9388           B  bench    heavy   30  \n",
+       "2019-01-11 15:08:05.400   2.1708           B  bench    heavy   30  \n",
+       "2019-01-11 15:08:05.600  -1.4146           B  bench    heavy   30  \n",
+       "2019-01-11 15:08:05.800  -2.0730           B  bench    heavy   30  \n",
+       "2019-01-11 15:08:06.000  -3.6098           B  bench    heavy   30  \n",
+       "2019-01-11 15:08:06.200  -6.4636           B  bench    heavy   30  \n",
+       "2019-01-11 15:08:06.400 -28.2196           B  bench    heavy   30  \n",
+       "2019-01-11 15:08:06.600 -17.5854           B  bench    heavy   30  \n",
+       "2019-01-11 15:08:06.800  -0.4026           B  bench    heavy   30  \n",
+       "2019-01-11 15:08:07.000  20.5732           B  bench    heavy   30  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### I am using .pickle file\n",
+    "df = pd.read_pickle('../Data/interim-Data/01_data_processed.pkl')\n",
+    "df.head(10)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
